test/cases/compile_errors/missing_main_fn_in_executable.zig


// error
// backend=llvm
// target=x86_64-linux
// output_mode=Exe
//
// : error: root struct of file 'tmp' has no member named 'main'
// : note: called from here
// : note: called from here
// : note: called from here
